k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-tech-challenge
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-tech-challenge
  template:
    metadata:
      labels:
        app: devops-tech-challenge
    spec:
      imagePullSecrets:
        - name: jfrog-regcred
      containers:
        - name: app
          image: trial29e6cp.jfrog.io/docker-trial/devops-tech-challenge-app:docker-da46cd47
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 45

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
