k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-tech-challenge
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-tech-challenge
  template:
    metadata:
      labels:
        app: devops-tech-challenge
    spec:
      imagePullSecrets:
        - name: jfrog-regcred
      containers:
        - name: app
          image: trial29e6cp.jfrog.io/docker-trial/devops-tech-challenge-app:docker-452742d9
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
            successThreshold: 1

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
