k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-tech-challenge
  namespace: dev
spec:
  selector:
    app: devops-tech-challenge
  ports:
    - port: 80
      targetPort: 3000
